Changelog
=========

1.10.11 (unreleased)
--------------------

- Nothing changed yet.


1.10.10 (2019-11-12)
--------------------

- Remove maintenance flag in directory if maintenance prepare scripts fail. This
  reduces changes for VM migration deadlock (#120249).


1.10.9 (2019-09-24)
-------------------

- Migrate project repository to Github.

- Fix parsing Qemu image sizes after Qemu upgrade, add test coverage. (#119236)


1.10.8 (2019-04-17)
-------------------

- Stop making backups for VMs in soft deletion stage. (#27020, #22345)


1.10.7 (2019-03-01)
-------------------

- Fix broken tests.

- Fix DNS updates when no reverse Zone exists (#107874).

- Fix disk resize for root partitions starting at sector 16384 (#108528).


1.10.6 (2018-11-30)
-------------------

- Additional logging in resize2fs (#107265).


1.10.5 (2018-10-22)
-------------------

- Adapt VM base image loading code to Ceph Jewel.

- Fix VM base image loading for Hydra static channel compatibility.


1.10.4 (2018-10-19)
-------------------

- Additional safeguards for filesystem resize (#106759).


1.10.3 (2018-10-10)
-------------------

- Fix bug in filesystem resize code (#105199).


1.10.2 (2018-09-27)
-------------------

- Ignore errors while purging old backup directories (#106478).


1.10.1 (2018-04-10)
-------------------

- Allow local include files for DHCP configuration, e.g.,
  `/etc/dhcp/local/dhcpd6.srv.in` (#100669).


1.10.0 (2018-04-04)
-------------------

- VM image charging: use LZ4 compressed images.


1.9.13 (2017-08-01)
-------------------

- Update hostmaster address (#16370).
- Stabilize DNS record sort order (#16370).


1.9.12 (2017-06-12)
-------------------

- Also configure output RG firewall rules to relieve conntrack table overload.


1.9.11 (2017-05-24)
-------------------

- Make vmimage download code more robust if encountering a 404. Hydra doesn't
  necessarily always provide an image and we're fine with that. We just keep