@@ -4,7 +4,7 @@
 from __future__ import unicode_literals, print_function
 from gocept.net.configure.zones import (
     Zone, ForwardZone, RR, Zones, ReverseZone, NodeAddr,
-    MixedRecordTypesException)
+    MixedRecordTypesException, walk)
 from netaddr import ip
 import configobj
 import datetime
@@ -331,6 +331,205 @@ zone "gocept.net" IN {
                           '/etc/bind/pri/gocept.net-internal.zone.static'],
                          self.z.internal_forward.include)
 
+    def test_end_to_end(self):
+        def node(name, mgm, srv, id):
+            interfaces = {}
+            if mgm:
+                interfaces['mgm'] = {'networks': {'172.16.1.0/24': ['172.16.1.%s' % id]}}
+            if srv:
+                interfaces['srv'] = {'networks': {'172.16.1.0/24': ['172.16.3.%s' % id]}}
+            return dict(name=name, parameters={
+                'location': 'rzob',
+                'interfaces': interfaces,
+                'reverses': {},
+                'production': True})
+
+        class DummyDirectory(object):
+            def list_nodes(self):
+                return [node('switch', mgm=True, srv=False, id=5),
+                        node('vm', mgm=False, srv=True, id=6),
+                        node('server', mgm=True, srv=True, id=7),
+                        node('dummy', mgm=False, srv=False, id=8)]
+
+        directory = DummyDirectory()
+
+        for node_addr in walk(directory):
+            node_addr.inject_records(self.z)
+
+        zones = self.z.all_internal_zones() + self.z.all_external_zones()
+        assert len(zones) == 9
+
+        assert [z.name for z in zones] == [
+            u'gocept.net-internal',
+            u'1.0.1.0.8.4.2.0.2.0.a.2.ip6.arpa',
+            u'22.172.in-addr.arpa',
+            u'125.62.195.in-addr.arpa',
+            u'128-25.41.122.212.in-addr.arpa',
+            u'gocept.net-external',
+            u'1.0.1.0.8.4.2.0.2.0.a.2.ip6.arpa',
+            u'125.62.195.in-addr.arpa',
+            u'128-25.41.122.212.in-addr.arpa']
+
+        # Eliminate the includes as those aren't around during tests
+        for z in zones:
+            z.include = []
+
+        assert zones[0].render(1) == '''\
+; generated by configure-zones
+$TTL 86400
+$ORIGIN gocept.net.
+@               86400   IN      SOA ns1.gocept.net. hostmaster.fcio.net. (
+                                        1 ; serial
+                                        10800 ; refresh
+                                        900 ; retry
+                                        2419200 ; expire
+                                        1800 ; neg ttl
+                                )
+                                NS      ns1.gocept.net.
+                                NS      ns2.gocept.net.
+$TTL 7200
+server                          A       172.16.3.7
+server.ipv4                     A       172.16.3.7
+server.mgm.rzob                 A       172.16.1.7
+server.mgm.rzob.ipv4            A       172.16.1.7
+server.srv.rzob                 CNAME   server
+server.srv.rzob.ipv4            CNAME   server.ipv4
+switch                          A       172.16.1.5
+switch.ipv4                     A       172.16.1.5
+switch.mgm.rzob                 CNAME   switch
+switch.mgm.rzob.ipv4            CNAME   switch.ipv4
+vm                              A       172.16.3.6
+vm.ipv4                         A       172.16.3.6
+vm.srv.rzob                     CNAME   vm
+vm.srv.rzob.ipv4                CNAME   vm.ipv4
+'''
+
+        assert zones[1].render(1) == '''\
+; generated by configure-zones
+$TTL 86400
+$ORIGIN 1.0.1.0.8.4.2.0.2.0.a.2.ip6.arpa.
+@               86400   IN      SOA ns1.gocept.net. hostmaster.fcio.net. (
+                                        1 ; serial
+                                        10800 ; refresh
+                                        900 ; retry
+                                        2419200 ; expire
+                                        1800 ; neg ttl
+                                )
+                                NS      ns1.gocept.net.
+                                NS      ns2.gocept.net.
+$TTL 7200
+'''
+        assert zones[2].render(1) == '''\
+; generated by configure-zones
+$TTL 86400
+$ORIGIN 22.172.in-addr.arpa.
+@               86400   IN      SOA ns1.gocept.net. hostmaster.fcio.net. (
+                                        1 ; serial
+                                        10800 ; refresh
+                                        900 ; retry
+                                        2419200 ; expire
+                                        1800 ; neg ttl
+                                )
+                                NS      ns1.gocept.net.
+                                NS      ns2.gocept.net.
+$TTL 7200
+'''
+        assert zones[3].render(1) == '''\
+; generated by configure-zones
+$TTL 86400
+$ORIGIN 125.62.195.in-addr.arpa.
+@               86400   IN      SOA ns1.gocept.net. hostmaster.fcio.net. (
+                                        1 ; serial
+                                        10800 ; refresh
+                                        900 ; retry
+                                        2419200 ; expire
+                                        1800 ; neg ttl
+                                )
+                                NS      ns1.gocept.net.
+                                NS      ns2.gocept.net.
+$TTL 7200
+'''
+
+        assert zones[4].render(1) == '''\
+; generated by configure-zones
+$TTL 86400
+$ORIGIN 128-25.41.122.212.in-addr.arpa.
+@               86400   IN      SOA ns1.gocept.net. hostmaster.fcio.net. (
+                                        1 ; serial
+                                        10800 ; refresh
+                                        900 ; retry
+                                        2419200 ; expire
+                                        1800 ; neg ttl
+                                )
+                                NS      ns1.gocept.net.
+                                NS      ns2.gocept.net.
+$TTL 7200
+'''
+
+        assert zones[5].render(1) == '''\
+; generated by configure-zones
+$TTL 86400
+$ORIGIN gocept.net.
+@               86400   IN      SOA ns1.gocept.net. hostmaster.fcio.net. (
+                                        1 ; serial
+                                        10800 ; refresh
+                                        900 ; retry
+                                        2419200 ; expire
+                                        1800 ; neg ttl
+                                )
+                                NS      ns1.gocept.net.
+                                NS      ns2.gocept.net.
+$TTL 7200
+'''
+
+        assert zones[6].render(1) == '''\
+; generated by configure-zones
+$TTL 86400
+$ORIGIN 1.0.1.0.8.4.2.0.2.0.a.2.ip6.arpa.
+@               86400   IN      SOA ns1.gocept.net. hostmaster.fcio.net. (
+                                        1 ; serial
+                                        10800 ; refresh
+                                        900 ; retry
+                                        2419200 ; expire
+                                        1800 ; neg ttl
+                                )
+                                NS      ns1.gocept.net.
+                                NS      ns2.gocept.net.
+$TTL 7200
+'''
+
+        assert zones[7].render(1) == '''\
+; generated by configure-zones
+$TTL 86400
+$ORIGIN 125.62.195.in-addr.arpa.
+@               86400   IN      SOA ns1.gocept.net. hostmaster.fcio.net. (
+                                        1 ; serial
+                                        10800 ; refresh
+                                        900 ; retry
+                                        2419200 ; expire
+                                        1800 ; neg ttl
+                                )
+                                NS      ns1.gocept.net.
+                                NS      ns2.gocept.net.
+$TTL 7200
+'''
+
+        assert zones[8].render(1) == '''\
+; generated by configure-zones
+$TTL 86400
+$ORIGIN 128-25.41.122.212.in-addr.arpa.
+@               86400   IN      SOA ns1.gocept.net. hostmaster.fcio.net. (
+                                        1 ; serial
+                                        10800 ; refresh
+                                        900 ; retry
+                                        2419200 ; expire
+                                        1800 ; neg ttl
+                                )
+                                NS      ns1.gocept.net.
+                                NS      ns2.gocept.net.
+$TTL 7200
+'''
+
 
 class NodeAddrTest(unittest.TestCase):
 
@@ -345,7 +544,8 @@ class NodeAddrTest(unittest.TestCase):
 
     @mock.patch('gocept.net.configure.zones.Zones')
     def test_short_and_canonical_for_srv_ipv4(self, zones):
-        n = NodeAddr('vm00', 'srv', 'whq', ip.IPAddress('212.122.41.136'))
+        n = NodeAddr('vm00', 'srv', 'whq', ip.IPAddress('212.122.41.136'),
+                     canonical=True)
         n.inject_records(zones)
         zones.add_addr.assert_any_call('vm00',
                                        ip.IPAddress('212.122.41.136'),
@@ -365,7 +565,8 @@ class NodeAddrTest(unittest.TestCase):
 
     @mock.patch('gocept.net.configure.zones.Zones')
     def test_short_and_canonical_for_srv_ipv6(self, zones):
-        n = NodeAddr('vm00', 'srv', 'whq', ip.IPAddress('2a02:248:101:63::5b'))
+        n = NodeAddr('vm00', 'srv', 'whq', ip.IPAddress('2a02:248:101:63::5b'),
+                     canonical=True)
         n.inject_records(zones)
         zones.add_addr.assert_any_call('vm00',
                                        ip.IPAddress('2a02:248:101:63::5b'),
@@ -376,7 +577,8 @@ class NodeAddrTest(unittest.TestCase):
 
     @mock.patch('gocept.net.configure.zones.Zones')
     def test_default_reverse(self, zones):
-        n = NodeAddr('vm00', 'srv', 'whq', ip.IPAddress('212.122.42.136'))
+        n = NodeAddr('vm00', 'srv', 'whq', ip.IPAddress('212.122.42.136'),
+                     canonical=True)
         n.inject_records(zones)
         zones.add_reverse.assert_called_with(ip.IPAddress('212.122.42.136'),
                                              'vm00')
